--- a/index.html
+++ b/index.html
@@ -56,6 +56,53 @@
         <button class="btn-secondary" onclick="window.location.href='services.html'">Découvrez nos services</button>
       </div>
     </section>
+
+    <div class="separator-line"></div>
+
+    <section class="chiffres">
+      <div class="titre-chiffre">
+        <h2>Nos Chiffres</h2>
+      </div>
+      <div class="cartes">
+        <div class="carte1">
+          <span class="compteur" data-target="150">0</span>
+          <span>Étudiants inscrits</span>
+        </div>
+        <div class="carte2">
+          <span class="compteur" data-target="320">0</span>
+          <span>Logements proposés</span>
+        </div>
+        <div class="carte3">
+          <span class="compteur" data-target="75">0</span>
+          <span>Dons réalisés</span>
+        </div>
+      </div>
+    </section>
+
+    <div class="separator-line"></div>
+
+    <section class="infos">
+      <div class="titre-infos">
+        <h2>Au-delà d'une plateforme : <br> Qui sommes-nous ?</h2>
+      </div>
+      <div class="infos-content">
+        <div class="info-left">
+          <img src="equipe.jpg" alt="Equipe">
+        </div>
+        <div class="info-right">
+          <span class="texte-info">
+            Le Coin des Étudiants est né d'un constat simple : être étudiant en France, c'est jongler entre logements difficiles à trouver, budgets serrés et services éparpillés partout. Nous avons voulu créer un espace unique, pensé par et pour les étudiants, où solidarité et accessibilité deviennent enfin la norme.
+          </span>
+          <span class="texte-info">
+            Envie de découvrir comment tout a commencé ?
+            Plonge dans notre histoire, comprends notre mission et rejoins une communauté qui change réellement la vie étudiante.
+          </span>
+          <button class="info-cta" onclick="window.location.href='apropos.html'">
+            Découvrir notre histoire & équipe
+          </button>
+        </div>
+      </div>
+    </section>
   </main>
 
 <script src="script.js"></script>
