--- a/partenariats.html
+++ b/partenariats.html
@@ -38,5 +38,20 @@
   </nav>
   <div id="menu-overlay" class="menu-overlay" aria-hidden="true"></div>
   <script src="script.js"></script>
+  <div class="carres-container">
+      <div class="carre">
+          <img src="image1.jpg" alt="Image 1">
+      </div>
+      <div class="carre">
+          <img src="image2.jpg" alt="Image 2">
+      </div>
+      <div class="carre">
+          <img src="image3.jpg" alt="Image 3">
+      </div>
+      <div class="carre">
+          <img src="image4.jpg" alt="Image 4">
+      </div>
+  </div>
 </body>
+
 </html>
