--- a/partenariats.html
+++ b/partenariats.html
@@ -40,18 +40,19 @@
   <script src="script.js"></script>
   <div class="carres-container">
       <div class="carre">
-          <img src="image1.jpg" alt="Image 1">
+          <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.facebook.com%2Fincubateur.engage%2F&psig=AOvVaw3TqoQoVU0t3rYoPkSk0TRo&ust=1763582452751000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCJCwrN--_JADFQAAAAAdAAAAABAE" alt="Image 1">
       </div>
       <div class="carre">
-          <img src="image2.jpg" alt="Image 2">
+          <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Facademia.hypotheses.org%2F48916&psig=AOvVaw1d_335KTadaia5FBARdoi5&ust=1763582506618000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCLj1iPm-_JADFQAAAAAdAAAAABAK" alt="Image 2">
       </div>
       <div class="carre">
-          <img src="image3.jpg" alt="Image 3">
+          <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fcat.opidor.fr%2Findex.php%2FUniversit%25C3%25A9_Paris_8&psig=AOvVaw0mPEKG9VMSC3253uZnt7I3&ust=1763582544179000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCKjqg4-__JADFQAAAAAdAAAAABBR" alt="Image 3">
       </div>
       <div class="carre">
-          <img src="image4.jpg" alt="Image 4">
+          <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.billetweb.fr%2Fdistribution-alimentaire-du-12-novembre-2025&psig=AOvVaw0cDgFXEGRAmtud-jbLyNg_&ust=1763582610312000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCICtrKq__JADFQAAAAAdAAAAABAE" alt="Image 4">
       </div>
   </div>
 </body>
 
 </html>
+
