--- a/partenariats.html
+++ b/partenariats.html
@@ -49,10 +49,11 @@
           <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fcat.opidor.fr%2Findex.php%2FUniversit%25C3%25A9_Paris_8&psig=AOvVaw0mPEKG9VMSC3253uZnt7I3&ust=1763582544179000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCKjqg4-__JADFQAAAAAdAAAAABBR" alt="Image 3">
       </div>
       <div class="carre">
-          <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.billetweb.fr%2Fdistribution-alimentaire-du-12-novembre-2025&psig=AOvVaw0cDgFXEGRAmtud-jbLyNg_&ust=1763582610312000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCICtrKq__JADFQAAAAAdAAAAABAE" alt="Image 4">
+          <img src="https://www.billetweb.fr/files/page/thumb/distribution-alimentaire-du-12-novembre-2025.png?v=1744280500" alt="Image 4">
       </div>
   </div>
 </body>
 
 </html>
+
 
