--- a/partenariats.html
+++ b/partenariats.html
@@ -40,13 +40,13 @@
   <script src="script.js"></script>
   <div class="carres-container">
       <div class="carre">
-          <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.facebook.com%2Fincubateur.engage%2F&psig=AOvVaw3TqoQoVU0t3rYoPkSk0TRo&ust=1763582452751000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCJCwrN--_JADFQAAAAAdAAAAABAE" alt="Image 1">
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTiAqzMvdkAlXMf8tpe3roqgPDHFxpxo0GxDouSFP6jmfpl4juQ9JV-MgAlhsxyr9YhXi8&usqp=CAU" alt="Image 1">
       </div>
       <div class="carre">
-          <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Facademia.hypotheses.org%2F48916&psig=AOvVaw1d_335KTadaia5FBARdoi5&ust=1763582506618000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCLj1iPm-_JADFQAAAAAdAAAAABAK" alt="Image 2">
+          <img src="https://academia.hypotheses.org/files/2023/05/LOGO_WEB_Logo-tagline-e1683219439306.png" alt="Image 2">
       </div>
       <div class="carre">
-          <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fcat.opidor.fr%2Findex.php%2FUniversit%25C3%25A9_Paris_8&psig=AOvVaw0mPEKG9VMSC3253uZnt7I3&ust=1763582544179000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCKjqg4-__JADFQAAAAAdAAAAABBR" alt="Image 3">
+          <img src="https://cat.opidor.fr/images/9/9a/Logo_P8.jpg" alt="Image 3">
       </div>
       <div class="carre">
           <img src="https://www.billetweb.fr/files/page/thumb/distribution-alimentaire-du-12-novembre-2025.png?v=1744280500" alt="Image 4">
@@ -55,5 +55,6 @@
 </body>
 
 </html>
+
 
 
