--- a/partenariats.html
+++ b/partenariats.html
@@ -40,21 +40,22 @@
   <script src="script.js"></script>
   <div class="carres-container">
       <div class="carre">
-          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTiAqzMvdkAlXMf8tpe3roqgPDHFxpxo0GxDouSFP6jmfpl4juQ9JV-MgAlhsxyr9YhXi8&usqp=CAU" alt="Image 1">
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTiAqzMvdkAlXMf8tpe3roqgPDHFxpxo0GxDouSFP6jmfpl4juQ9JV-MgAlhsxyr9YhXi8&usqp=CAU" alt="Incubateur Engage">
       </div>
       <div class="carre">
-          <img src="https://academia.hypotheses.org/files/2023/05/LOGO_WEB_Logo-tagline-e1683219439306.png" alt="Image 2">
+          <img src="https://upload.wikimedia.org/wikipedia/fr/5/59/Union_%C3%A9tudiante_%28logo_2023%29.png" alt="Union des étudiants">
       </div>
       <div class="carre">
-          <img src="https://cat.opidor.fr/images/9/9a/Logo_P8.jpg" alt="Image 3">
+          <img src="https://www.emploipublic.fr/mediatheque/2/3/5/000089532.jpg" alt="Université Paris 8">
       </div>
       <div class="carre">
-          <img src="https://www.billetweb.fr/files/page/thumb/distribution-alimentaire-du-12-novembre-2025.png?v=1744280500" alt="Image 4">
+          <img src="https://www.billetweb.fr/files/page/thumb/distribution-alimentaire-du-12-novembre-2025.png?v=1744280500" alt="Co P1 Saint Denis">
       </div>
   </div>
 </body>
 
 </html>
+
 
 
 
