--- a/partenariats.html
+++ b/partenariats.html
@@ -39,22 +39,38 @@
   <div id="menu-overlay" class="menu-overlay" aria-hidden="true"></div>
   <script src="script.js"></script>
   <div class="carres-container">
-      <div class="carre">
-          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTiAqzMvdkAlXMf8tpe3roqgPDHFxpxo0GxDouSFP6jmfpl4juQ9JV-MgAlhsxyr9YhXi8&usqp=CAU" alt="Incubateur Engage">
-      </div>
-      <div class="carre">
-          <img src="https://upload.wikimedia.org/wikipedia/fr/5/59/Union_%C3%A9tudiante_%28logo_2023%29.png" alt="Union des étudiants">
-      </div>
-      <div class="carre">
-          <img src="https://www.emploipublic.fr/mediatheque/2/3/5/000089532.jpg" alt="Université Paris 8">
-      </div>
-      <div class="carre">
-          <img src="https://www.billetweb.fr/files/page/thumb/distribution-alimentaire-du-12-novembre-2025.png?v=1744280500" alt="Co P1 Saint Denis">
-      </div>
-  </div>
+    <div class="carre-item">
+        <div class="carre">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTiAqzMvdkAlXMf8tpe3roqgPDHFxpxo0GxDouSFP6jmfpl4juQ9JV-MgAlhsxyr9YhXi8&usqp=CAU" alt="Incubateur Engage">
+        </div>
+        <a href="https://site1.com" class="carre-btn">Voir plus</a>
+    </div>
+
+    <div class="carre-item">
+        <div class="carre">
+            <img src="https://upload.wikimedia.org/wikipedia/fr/5/59/Union_%C3%A9tudiante_%28logo_2023%29.png" alt="Union des étudiants">
+        </div>
+        <a href="https://site2.com" class="carre-btn">Voir plus</a>
+    </div>
+
+    <div class="carre-item">
+        <div class="carre">
+            <img src="https://www.emploipublic.fr/mediatheque/2/3/5/000089532.jpg" alt="Université Paris 8">
+        </div>
+        <a href="https://site3.com" class="carre-btn">Voir plus</a>
+    </div>
+
+    <div class="carre-item">
+        <div class="carre">
+            <img src="https://www.billetweb.fr/files/page/thumb/distribution-alimentaire-du-12-novembre-2025.png?v=1744280500" alt="Co P1 Saint Denis">
+        </div>
+        <a href="https://site4.com" class="carre-btn">Voir plus</a>
+    </div>
+</div>
 </body>
 
 </html>
+
 
 
 
