--- a/partenariats.html
+++ b/partenariats.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Le Coin Des Étudiants</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="partenariats.css">
 </head>
 <body>
   <nav>
@@ -70,6 +70,7 @@
 </body>
 
 </html>
+
 
 
 
