--- a/partenariats.html
+++ b/partenariats.html
@@ -43,33 +43,34 @@
         <div class="carre">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTiAqzMvdkAlXMf8tpe3roqgPDHFxpxo0GxDouSFP6jmfpl4juQ9JV-MgAlhsxyr9YhXi8&usqp=CAU" alt="Incubateur Engage">
         </div>
-        <a href="https://i-engage.mystrikingly.com/" class="carre-btn">Voir plus</a>
+        <a href="https://i-engage.mystrikingly.com/" class="carre-btn">Incubateur Engage</a>
     </div>
 
     <div class="carre-item">
         <div class="carre">
             <img src="https://upload.wikimedia.org/wikipedia/fr/5/59/Union_%C3%A9tudiante_%28logo_2023%29.png" alt="Union des étudiants">
         </div>
-        <a href="https://union-etudiante.fr/" class="carre-btn">Voir plus</a>
+        <a href="https://union-etudiante.fr/" class="carre-btn">Union Etudiant</a>
     </div>
 
     <div class="carre-item">
         <div class="carre">
             <img src="https://www.emploipublic.fr/mediatheque/2/3/5/000089532.jpg" alt="Université Paris 8">
         </div>
-        <a href="https://www.univ-paris8.fr/" class="carre-btn">Voir plus</a>
+        <a href="https://www.univ-paris8.fr/" class="carre-btn">Université Paris 8</a>
     </div>
 
     <div class="carre-item">
         <div class="carre">
             <img src="https://www.billetweb.fr/files/page/thumb/distribution-alimentaire-du-12-novembre-2025.png?v=1744280500" alt="Co P1 Saint Denis">
         </div>
-        <a href="https:https://cop1.fr/" class="carre-btn">Voir plus</a>
+        <a href="https://cop1.fr/" class="carre-btn">CO P1</a>
     </div>
 </div>
 </body>
 
 </html>
+
 
 
 
