--- a/partenariats.html
+++ b/partenariats.html
@@ -67,9 +67,13 @@
         <a href="https://cop1.fr/" class="carre-btn">CO P1</a>
     </div>
 </div>
+  <div class="big-button-container">
+    <a href="#" class="big-button">Découvrir nos autres partenaires</a>
+</div>
 </body>
 
 </html>
+
 
 
 
