--- a/partenariats.html
+++ b/partenariats.html
@@ -68,11 +68,12 @@
     </div>
 </div>
   <div class="big-button-container">
-    <a href="#" class="big-button">Découvrir nos autres partenaires</a>
+    <a href="#" class="big-button">Formulaire</a>
 </div>
 </body>
 
 </html>
+
 
 
 
