--- a/partenariats.html
+++ b/partenariats.html
@@ -35,9 +35,11 @@
         Rejoins notre canal
       </button>
     </div>
-  </nav>
+  </nav> <!-- 🚀 CORRECTION : fermeture du nav ajoutée -->
+
   <div id="menu-overlay" class="menu-overlay" aria-hidden="true"></div>
   <script src="script.js"></script>
+
   <div class="carres-container">
     <div class="carre-item">
         <div class="carre">
@@ -66,20 +68,10 @@
         </div>
         <a href="https://cop1.fr/" class="carre-btn">CO P1</a>
     </div>
-</div>
+  </div>
+
   <div class="big-button-container">
     <a href="#" class="big-button">Formulaire</a>
-</div>
+  </div>
 </body>
-
 </html>
-
-
-
-
-
-
-
-
-
-
