--- a/partenariats.html
+++ b/partenariats.html
@@ -36,6 +36,11 @@
       </button>
     </div>
   </nav> <!-- 🚀 CORRECTION : fermeture du nav ajoutée -->
+  
+<div class="page-title">
+    <h1>Partenariats</h1>
+    <div class="title-underline"></div>
+</div>
 
   <div id="menu-overlay" class="menu-overlay" aria-hidden="true"></div>
   <script src="script.js"></script>
@@ -75,3 +80,4 @@
   </div>
 </body>
 </html>
+
