--- a/partenariats.html
+++ b/partenariats.html
@@ -78,6 +78,10 @@
   <div class="big-button-container">
     <a href="#" class="big-button">Formulaire</a>
   </div>
+  <div class="texte">
+    <p>Le Coin Des Étudiants connecte les étudiants aux meilleures opportunités pour réussir et s’épanouir. En rejoignant notre projet, vous contribuez à un impact réel sur leur avenir tout en valorisant votre engagement. Ensemble, construisons des solutions innovantes et durables pour la jeunesse.</p>
+  </div>
 </body>
 </html>
+
 
