--- a/apropos.html
+++ b/apropos.html
@@ -18,15 +18,27 @@
       </div>
 
       <div class="apropos-text">
-        <p>
-          Ici, tu peux raconter l'histoire du projet : comment tout a commencé, ce
-          qui a motivé la création de l'association, et les valeurs qui la
-          définissent.
-        </p>
-        <p>
-          Deuxième bloc de texte : approfondis la vision, les objectifs du projet
-          et l'impact que vous souhaitez créer.
-        </p>
+       <p>
+  🧩 <strong>L’histoire de Coin des Étudiants</strong><br><br>
+
+  Être étudiant en France, c’est souvent devoir relever de nombreux défis : trouver un logement, s’équiper à petit prix, accéder à des services abordables ou simplement bénéficier d’un peu de solidarité. Nous avons tous connu ces moments où chaque euro compte, où il faut improviser pour réussir à s’en sortir.<br><br>
+
+  En observant notre quotidien, nous avons remarqué que tous les services utiles aux étudiants étaient dispersés : ici une plateforme de dons, là une autre pour la colocation, ailleurs un site pour les bons plans… Aucune ne regroupait tous ces besoins essentiels au même endroit, spécifiquement pour les étudiants.<br><br>
+
+  Les plateformes généralistes comme Leboncoin proposent des solutions, mais elles restent souvent difficiles d’accès pour les budgets étudiants : prix trop élevés, offres inadaptées, risques d’arnaques ou encore frais d’agence abusifs pour la recherche de logement.<br><br>
+
+  C’est pour répondre à ces problèmes qu’est né <strong>Coin des Étudiants</strong>, une plateforme tout-en-un, pensée par des étudiants et pour les étudiants, qui rassemble :<br><br>
+
+  • des offres de logement et de colocation sans frais d’agence,<br>
+  • des dons d’objets (meubles, électroménager, vêtements…),<br>
+  • un espace d’achat et de vente entre étudiants,<br>
+  • des bons plans pour améliorer le quotidien étudiant.<br><br>
+
+  Notre ambition est simple : rendre la vie étudiante plus accessible, plus humaine et plus connectée.<br><br>
+
+  <strong>Coin des Étudiants</strong>, ce n’est pas seulement un projet numérique : c’est une communauté d’entraide, où chacun peut donner, recevoir, partager et réussir.
+</p>
+
       </div>
     </div>
 
@@ -44,24 +56,24 @@
 
     <div class="equipe-grid">
       <div class="membre">
-        <img src="membre1.jpg" alt="Membre équipe" />
-        <h3>Nom Prénom</h3>
-        <p>Poste dans l'association</p>
-        <a href="#">Contact</a>
+        <img src="Fondateur.jpg" alt="Membre équipe" />
+        <h3>Cheikh ibra Ndiaye</h3>
+        <p>Fondateur</p>
+        <a href="#">cheikhibrandiaye75@email.com</a>
       </div>
 
       <div class="membre">
-        <img src="membre2.jpg" alt="Membre équipe" />
-        <h3>Nom Prénom</h3>
-        <p>Poste dans l'association</p>
-        <a href="#">Contact</a>
+        <img src="meuf.jpg" alt="Membre équipe" />
+        <h3>Niang Bassine</h3>
+        <p>Directrice Générale & Responsable communication</p>
+        <a href="#">enissab565@gmail.com</a>
       </div>
 
       <div class="membre">
-        <img src="membre3.jpg" alt="Membre équipe" />
-        <h3>Nom Prénom</h3>
-        <p>Poste dans l'association</p>
-        <a href="#">Contact</a>
+        <img src="mec3.jpg" alt="Membre équipe" />
+        <h3>Niang Dauda</h3>
+        <p>Chef de produit / Responsable innovation</p>
+        <a href="#">niangdauda7@gmail.com</a>
       </div>
     </div>
   </section>
@@ -70,7 +82,7 @@
     <h2>Vous souhaitez nous rejoindre ?</h2>
 
     <div class="cta-buttons">
-      <a href="formulaire.html" class="cta">Formulaire partenariat</a>
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSfxFWhEgEM0nuMQ1LxaQ293BqxbW6cxz4bv4Nd62cu1i846mQ/viewform?usp=header" class="cta">Formulaire partenariat</a>
       <a href="https://whatsapp.com/channel/0029VbAwDzD8fewrz5ocLE03" class="cta">Canal WhatsApp</a>
     </div>
 
