Fix HTML entities and improve formatting

--- a/apropos.html
+++ b/apropos.html
@@ -41,7 +41,7 @@
 
     <div class="apropos-section">
       <div class="apropos-image">
-        <img src="image-equipe.jpg" alt="Notre équipe" />
+        <img src="equipe.jpg" alt="Notre équipe" />
       </div>
 
       <div class="apropos-text">
@@ -276,4 +276,5 @@ h2::after {
   }
 }
 </style>
+
 
