Add testimonial section to index.html

--- a/index.html
+++ b/index.html
@@ -103,6 +103,15 @@
         </div>
       </div>
     </section>
+
+    <div class="separator-line"></div>
+
+    <section class="temoignage">
+      <div class="titre-temoignage">
+        <h2>Ils témoignent :</h2>
+      </div>
+      ...
+    </section>
   </main>
 
 <script src="script.js"></script>
