Add community section to index.html

--- a/index.html
+++ b/index.html
@@ -133,6 +133,16 @@
         <button class="arrow right" id="next">❯</button>
       </div>
     </section>
+
+  <div class="separator-line"></div>
+
+    <section class="commu">
+      <div class="titre-commu">
+        <h2>Rejoignez notre communauté :</h2>
+      </div>
+      
+      </div>
+    </section>
   </main>
 
 <script src="script.js"></script>
