Add buttons for community engagement section

--- a/index.html
+++ b/index.html
@@ -140,7 +140,10 @@
       <div class="titre-commu">
         <h2>Rejoignez notre communauté :</h2>
       </div>
-      
+      <div class="commu-cta">
+        <button class="btn-logement">Proposer un logement</button>
+        <button class="btn-reseaux" onclick="window.location.href='services.html'">Suivez-nous</button>
+      </div>
       </div>
     </section>
   </main>
