--- a/index.html
+++ b/index.html
@@ -147,6 +147,41 @@
     </section>
   </main>
 
+  <footer>
+    <div class="footer-container">
+  
+      <div class="footer-section">
+        <h3>Le Coin Des Étudiants</h3>
+        <p>La plateforme solidaire dédiée aux étudiants en France.</p>
+      </div>
+  
+      <div class="footer-section">
+        <h4>Navigation</h4>
+        <ul>
+          <li><a href="index.html">Accueil</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="apropos.html">À propos</a></li>
+          <li><a href="partenariats.html">Partenariats</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </div>
+  
+      <div class="footer-section">
+        <h4>Réseaux sociaux</h4>
+        <ul>
+          <li><a href="https://whatsapp.com/channel/0029VbAwDzD8fewrz5ocLE03">Canal WhatsApp</a></li>
+        </ul>
+      </div>
+  
+      <div class="footer-section">
+        <h4>Contact</h4>
+        <p>Email : contact@coindesetudiants.fr</p>
+        <p>© 2025 Le Coin Des Étudiants — Tous droits réservés</p>
+      </div>
+  
+    </div>
+  </footer>
+
 <script src="script.js"></script>
 </body>
 </html>
