--- a/contact.html
+++ b/contact.html
@@ -30,6 +30,11 @@
       <button class="menu-cta">Télécharge l'application</button>
     </ul>
 
+    <div class="page-title">
+    <h1>Contact</h1>
+    <div class="title-underline"></div>
+</div>
+
     <div class="cta">
       <button class="cta-btn" onclick="window.location.href='https://whatsapp.com/channel/0029VbAwDzD8fewrz5ocLE03'">
         <img src="logo-whatsapp.png" alt="WhatsApp">
@@ -73,3 +78,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
