Fix HTML structure and formatting issues

--- a/partenariats.html
+++ b/partenariats.html
@@ -35,16 +35,15 @@
         Rejoins notre canal
       </button>
     </div>
-  </nav> <!-- 🚀 CORRECTION : fermeture du nav ajoutée -->
+  </nav> 
   
-<div class="page-title">
-    <h1>Partenariats</h1>
-    <div class="title-underline"></div>
-</div>
+  <div class="page-title">
+      <h1>Partenariats</h1>
+      <div class="title-underline"></div>
+  </div>
 
   <div id="menu-overlay" class="menu-overlay" aria-hidden="true"></div>
-  <script src="script.js"></script>
-
+  
   <div class="carres-container">
     <div class="carre-item">
         <div class="carre">
@@ -81,8 +80,10 @@
   <div class="texte">
     <p>Le Coin Des Étudiants connecte les étudiants aux meilleures opportunités pour réussir et s’épanouir. En rejoignant notre projet, vous contribuez à un impact réel sur leur avenir tout en valorisant votre engagement. Ensemble, construisons des solutions innovantes et durables pour la jeunesse.</p>
   </div>
+<script src="script.js"></script>
 </body>
 </html>
+
 
 
 
