--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,8 @@
     </div>
   </nav>
   <div id="menu-overlay" class="menu-overlay" aria-hidden="true"></div>
-  <main class="contact-layout">
+  
+  <main class="contact-page">
     <div class="page-title">
       <h1>Contact</h1>
       <div class="title-underline"></div>
@@ -77,6 +78,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
