--- a/contact.html
+++ b/contact.html
@@ -38,8 +38,7 @@
     </div>
   </nav>
   <div id="menu-overlay" class="menu-overlay" aria-hidden="true"></div>
-  
-  <main class="contact-page">
+  <main>
     <div class="page-title">
       <h1>Contact</h1>
       <div class="title-underline"></div>
@@ -78,6 +77,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
