--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Le Coin Des Étudiants</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="services.css">
 </head>
 <body>
   <nav>
@@ -39,4 +39,5 @@
   <div id="menu-overlay" class="menu-overlay" aria-hidden="true"></div>
   <script src="script.js"></script>
 </body>
+
 </html>
