--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
       </div>
     
       <div class="commu-social">
-        <a href="#"><img src="img/insta.svg" alt="Instagram"></a>
-        <a href="#"><img src="img/whatsapp.svg" alt="WhatsApp"></a>
-        <a href="#"><img src="img/tiktok.svg" alt="TikTok"></a>
+        <a href=" https://www.instagram.com/coin_des_etudiants"><img src="logo-insta.png" alt="Instagram"></a>
+        <a href="https://whatsapp.com/channel/0029VbAwDzD8fewrz5ocLE03"><img src="logo-whatsapp.png" alt="WhatsApp"></a>
+        <a href="https://www.linkedin.com/company/coin-des-etudiants/"><img src="logo-linkedin.png" alt="LinkedIn"></a>
       </div>
     
       <div class="commu-cta">
