--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Le Coin Des Étudiants</title>
-  <link rel="stylesheet" href="services.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <nav>
@@ -41,3 +41,4 @@
 </body>
 
 </html>
+
