--- a/index.html
+++ b/index.html
@@ -145,9 +145,15 @@
       </div>
     
       <div class="commu-social">
-        <a href=" https://www.instagram.com/coin_des_etudiants"><img src="logo-insta.png" alt="Instagram"></a>
-        <a href="https://whatsapp.com/channel/0029VbAwDzD8fewrz5ocLE03"><img src="logo-whatsapp.png" alt="WhatsApp"></a>
-        <a href="https://www.linkedin.com/company/coin-des-etudiants/"><img src="logo-linkedin.png" alt="LinkedIn"></a>
+        <a href="https://www.instagram.com/coin_des_etudiants">
+            <img id="insta-logo" src="logo-insta.png" alt="Instagram">
+        </a>
+        <a href="https://whatsapp.com/channel/0029VbAwDzD8fewrz5ocLE03">
+            <img id="whatsapp-logo" src="logo-whatsapp.png" alt="WhatsApp">
+        </a>
+        <a href="https://www.linkedin.com/company/coin-des-etudiants/">
+            <img id="linkedin-logo" src="logo-linkedin.png" alt="LinkedIn">
+        </a>
       </div>
     
       <div class="commu-cta">
