--- a/index.html
+++ b/index.html
@@ -144,16 +144,10 @@
         <p class="commu-desc">Partagez, aidez, échangez : ensemble, construisons une communauté solidaire.</p>
       </div>
     
-      <div class="commu-social">
-        <a href="https://www.instagram.com/coin_des_etudiants">
-            <img id="insta-logo" src="logo-insta.png" alt="Instagram">
-        </a>
-        <a href="https://whatsapp.com/channel/0029VbAwDzD8fewrz5ocLE03">
-            <img id="whatsapp-logo" src="logo-whatsapp.png" alt="WhatsApp">
-        </a>
-        <a href="https://www.linkedin.com/company/coin-des-etudiants/">
-            <img id="linkedin-logo" src="logo-linkedin.png" alt="LinkedIn">
-        </a>
+      <div class="social-icons">
+        <a href="https://www.instagram.com/coin_des_etudiants"><img id="insta-logo" src="logo-insta.png" alt="Instagram"></a>
+        <a href="https://whatsapp.com/channel/0029VbAwDzD8fewrz5ocLE03"><img id="whatsapp-logo" src="logo-whatsapp.png" alt="WhatsApp"></a>
+        <a href="https://www.linkedin.com/company/coin-des-etudiants/"><img id="linkedin-logo" src="logo-linkedin.png" alt="LinkedIn"></a>
       </div>
     
       <div class="commu-cta">
