--- a/apropos.html
+++ b/apropos.html
@@ -118,163 +118,39 @@
     <a href="#" class="cta-big">Télécharger l'application</a>
   </section>
 
+  <footer>
+    <div class="footer-container">
+  
+      <div class="footer-section">
+        <h3>Le Coin Des Étudiants</h3>
+        <p>La plateforme solidaire dédiée aux étudiants en France.</p>
+      </div>
+  
+      <div class="footer-section">
+        <h3>Navigation</h3>
+        <ul>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="apropos.html">À propos</a></li>
+          <li><a href="partenariats.html">Partenariats</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </div>
+  
+      <div class="footer-section">
+        <h3>Réseaux sociaux</h3>
+        <ul>
+          <li><a href="https://whatsapp.com/channel/0029VbAwDzD8fewrz5ocLE03">Canal WhatsApp</a></li>
+        </ul>
+      </div>
+  
+      <div class="footer-section">
+        <h3>Contact</h3>
+        <p>Email : contact@coindesetudiants.fr</p>
+        <p>© 2025 Le Coin Des Étudiants — Tous droits réservés</p>
+      </div>
+  
+    </div>
+  </footer>
+
 </body>
 </html>
-
-
-<!-- CSS for A propos page (apropos.css) -->
-<style>
-body {
-  font-family: Arial, sans-serif;
-  background: #f8f9fa;
-  margin: 0;
-  padding: 0;
-}
-
-section {
-  padding: 60px 6%;
-}
-
-h2 {
-  text-align: center;
-  color: #1c95eb;
-  font-size: 2.2rem;
-  margin-bottom: 40px;
-  position: relative;
-}
-
-h2::after {
-  content: "";
-  display: block;
-  width: 90px;
-  height: 4px;
-  background: linear-gradient(90deg, #1c95eb, #30ce27);
-  margin: 12px auto 0;
-  border-radius: 20px;
-}
-
-/* Mise en page principale */
-.apropos-section {
-  display: flex;
-  gap: 40px;
-  align-items: flex-start;
-  flex-wrap: wrap;
-}
-
-.apropos-image img {
-  width: 100%;
-  max-width: 450px;
-  border-radius: 16px;
-  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.15);
-}
-
-.apropos-text p {
-  margin-bottom: 20px;
-  font-size: 1.1rem;
-  color: #30ce27;
-  line-height: 1.6;
-}
-
-/* Vidéo */
-.apropos-video iframe {
-  width: 100%;
-  max-width: 700px;
-  height: 380px;
-  border-radius: 16px;
-  border: none;
-  display: block;
-  margin: 40px auto 0;
-}
-
-/* Notre équipe */
-.equipe-grid {
-  display: flex;
-  justify-content: center;
-  gap: 30px;
-  flex-wrap: wrap;
-}
-
-.membre {
-  background: #fff;
-  padding: 20px;
-  border-radius: 16px;
-  text-align: center;
-  width: 260px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-}
-
-.membre img {
-  width: 100%;
-  border-radius: 50%;
-  height: 180px;
-  object-fit: cover;
-}
-
-.membre h3 {
-  margin-top: 15px;
-  font-size: 1.2rem;
-  color: #1c95eb;
-}
-
-.membre p {
-  color: #30ce27;
-  margin: 5px 0;
-}
-
-.membre a {
-  color: #1c95eb;
-  text-decoration: underline;
-  font-size: 0.9rem;
-}
-
-/* Rejoindre */
-.cta-buttons {
-  display: flex;
-  justify-content: center;
-  gap: 20px;
-  margin-bottom: 30px;
-}
-
-.cta {
-  display: inline-block;
-  background: #1c95eb;
-  color: #fff;
-  padding: 14px 28px;
-  border-radius: 30px;
-  font-weight: bold;
-  text-decoration: none;
-  transition: 0.3s;
-}
-
-.cta:hover {
-  background: #0054ad;
-}
-
-.cta-big {
-  display: block;
-  width: fit-content;
-  margin: auto;
-  padding: 16px 40px;
-  background: linear-gradient(90deg, #1c95eb, #30ce27);
-  color: #fff;
-  text-decoration: none;
-  border-radius: 50px;
-  font-size: 1.2rem;
-  font-weight: bold;
-  transition: 0.3s;
-}
-
-.cta-big:hover {
-  transform: translateY(-3px);
-}
-
-/* Responsive */
-@media (max-width: 768px) {
-  .apropos-section {
-    flex-direction: column;
-    text-align: center;
-  }
-}
-</style>
-
-
