--- a/partenariats.html
+++ b/partenariats.html
@@ -80,9 +80,44 @@
   <div class="texte">
     <p>Le Coin Des Étudiants connecte les étudiants aux meilleures opportunités pour réussir et s’épanouir. En rejoignant notre projet, vous contribuez à un impact réel sur leur avenir tout en valorisant votre engagement. Ensemble, construisons des solutions innovantes et durables pour la jeunesse.</p>
   </div>
+
+  <footer>
+    <div class="footer-container">
+  
+      <div class="footer-section">
+        <h3>Le Coin Des Étudiants</h3>
+        <p>La plateforme solidaire dédiée aux étudiants en France.</p>
+      </div>
+  
+      <div class="footer-section">
+        <h3>Navigation</h3>
+        <ul>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="apropos.html">À propos</a></li>
+          <li><a href="partenariats.html">Partenariats</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </div>
+  
+      <div class="footer-section">
+        <h3>Réseaux sociaux</h3>
+        <ul>
+          <li><a href="https://whatsapp.com/channel/0029VbAwDzD8fewrz5ocLE03">Canal WhatsApp</a></li>
+        </ul>
+      </div>
+  
+      <div class="footer-section">
+        <h3>Contact</h3>
+        <p>Email : contact@coindesetudiants.fr</p>
+        <p>© 2025 Le Coin Des Étudiants — Tous droits réservés</p>
+      </div>
+  
+    </div>
+  </footer>
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
