--- a/apropos.html
+++ b/apropos.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Le Coin Des Étudiants</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="apropos.css">
 </head>
 <body>
   <nav>
@@ -154,3 +154,4 @@
 
 </body>
 </html>
+
