--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
         </div>
 
         <div class="hero-right">
-          <h1>L'entraide étudiante simplifiée</h1>
-          <h1>Logements, Dons, Ventes</h1>
+          <h1>Se loger, louer, sous-louer, recevoir, aider, vendre, acheter - Tout ça, c'est Coin Des Etudiants !</h1>
           <h2>Des plateformes solidaires pour transformer la vie étudiante en France</h2>
         </div>
       </div>
