--- a/apropos.html
+++ b/apropos.html
@@ -1,157 +1,92 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Le Coin Des Étudiants</title>
-  <link rel="stylesheet" href="apropos.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>À propos – Coin des Étudiants</title>
+    <link rel="stylesheet" href="apropos.css">
 </head>
 <body>
-  <nav>
-    <div class="burger" id="burger">
-      &#9776; 
-    </div>
 
-    <div class="logo">
-      <img src="logo.png" alt="Logo">
-      <span>Le Coin Des Étudiants</span>
-    </div>
-    <ul class="nav-links" id="nav-links">
-      <li class="menu-header">
-        <span>Le Coin Des Étudiants</span>
-      </li>
-      <li><a href="index.html" class="active">Accueil</a></li>
-      <li><a href="services.html">Services</a></li>
-      <li><a href="apropos.html">À propos</a></li>
-      <li><a href="partenariats.html">Partenariats</a></li>
-      <li><a href="contact.html">Contact</a></li>
-      <button class="menu-cta">Télécharge l'application</button>
-    </ul>
+    <!-- NAVBAR -->
+    <nav>
+        <a href="#" class="logo">
+            <img src="logo.png" alt="Logo">
+            Coin des Étudiants
+        </a>
 
-    <div class="cta">
-      <button class="cta-btn" onclick="window.location.href='https://whatsapp.com/channel/0029VbAwDzD8fewrz5ocLE03'">
-        <img src="logo-whatsapp.png" alt="WhatsApp">
-        Rejoins notre canal
-      </button>
-    </div>
-  </nav>
-  <div id="menu-overlay" class="menu-overlay" aria-hidden="true"></div>
-  <section class="apropos-header">
-    <h2>À propos de nous</h2>
-
-    <div class="apropos-section">
-      <div class="apropos-image">
-        <img src="equipe.jpg" alt="Notre équipe" />
-      </div>
-
-      <div class="apropos-text">
-       <p>
-  🧩 <strong>L’histoire de Coin des Étudiants</strong><br><br>
-
-  Être étudiant en France, c’est souvent devoir relever de nombreux défis : trouver un logement, s’équiper à petit prix, accéder à des services abordables ou simplement bénéficier d’un peu de solidarité. Nous avons tous connu ces moments où chaque euro compte, où il faut improviser pour réussir à s’en sortir.<br><br>
-
-  En observant notre quotidien, nous avons remarqué que tous les services utiles aux étudiants étaient dispersés : ici une plateforme de dons, là une autre pour la colocation, ailleurs un site pour les bons plans… Aucune ne regroupait tous ces besoins essentiels au même endroit, spécifiquement pour les étudiants.<br><br>
-
-  Les plateformes généralistes comme Leboncoin proposent des solutions, mais elles restent souvent difficiles d’accès pour les budgets étudiants : prix trop élevés, offres inadaptées, risques d’arnaques ou encore frais d’agence abusifs pour la recherche de logement.<br><br>
-
-  C’est pour répondre à ces problèmes qu’est né <strong>Coin des Étudiants</strong>, une plateforme tout-en-un, pensée par des étudiants et pour les étudiants, qui rassemble :<br><br>
-
-  • des offres de logement et de colocation sans frais d’agence,<br>
-  • des dons d’objets (meubles, électroménager, vêtements…),<br>
-  • un espace d’achat et de vente entre étudiants,<br>
-  • des bons plans pour améliorer le quotidien étudiant.<br><br>
-
-  Notre ambition est simple : rendre la vie étudiante plus accessible, plus humaine et plus connectée.<br><br>
-
-  <strong>Coin des Étudiants</strong>, ce n’est pas seulement un projet numérique : c’est une communauté d’entraide, où chacun peut donner, recevoir, partager et réussir.
-</p>
-
-      </div>
-    </div>
-
-    <div class="apropos-video">
-      <iframe
-        src="https://www.youtube.com/embed/VIDEO_ID"
-        title="Présentation vidéo"
-        allowfullscreen
-      ></iframe>
-    </div>
-  </section>
-
-  <section class="equipe">
-    <h2>Notre équipe</h2>
-
-    <div class="equipe-grid">
-      <div class="membre">
-        <img src="Fondateur.jpg" alt="Membre équipe" />
-        <h3>Cheikh ibra Ndiaye</h3>
-        <p>Fondateur</p>
-        <a href="#">cheikhibrandiaye75@email.com</a>
-      </div>
-
-      <div class="membre">
-        <img src="meuf.jpg" alt="Membre équipe" />
-        <h3>Niang Bassine</h3>
-        <p>Directrice Générale & Responsable communication</p>
-        <a href="#">enissab565@gmail.com</a>
-      </div>
-
-      <div class="membre">
-        <img src="mec3.jpg" alt="Membre équipe" />
-        <h3>Niang Dauda</h3>
-        <p>Chef de produit / Responsable innovation</p>
-        <a href="#">niangdauda7@gmail.com</a>
-      </div>
-    </div>
-  </section>
-
-  <section class="rejoindre">
-    <h2>Vous souhaitez nous rejoindre ?</h2>
-
-    <div class="cta-buttons">
-      <a href="https://docs.google.com/forms/d/e/1FAIpQLSfxFWhEgEM0nuMQ1LxaQ293BqxbW6cxz4bv4Nd62cu1i846mQ/viewform?usp=header" class="cta">Formulaire partenariat</a>
-      <a href="https://whatsapp.com/channel/0029VbAwDzD8fewrz5ocLE03" class="cta">Canal WhatsApp</a>
-    </div>
-
-    <h3>Ou alors...</h3>
-
-    <a href="#" class="cta-big">Télécharger l'application</a>
-  </section>
-
-  <footer>
-    <div class="footer-container">
-  
-      <div class="footer-section">
-        <h3>Le Coin Des Étudiants</h3>
-        <p>La plateforme solidaire dédiée aux étudiants en France.</p>
-      </div>
-  
-      <div class="footer-section">
-        <h3>Navigation</h3>
-        <ul>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="apropos.html">À propos</a></li>
-          <li><a href="partenariats.html">Partenariats</a></li>
-          <li><a href="contact.html">Contact</a></li>
+        <ul class="nav-links">
+            <li><a href="#">Accueil</a></li>
+            <li><a href="#">Dons</a></li>
+            <li><a href="#">Logements</a></li>
+            <li><a href="#">Contact</a></li>
+            <li class="active"><a href="#">À propos</a></li>
         </ul>
-      </div>
-  
-      <div class="footer-section">
-        <h3>Réseaux sociaux</h3>
-        <ul>
-          <li><a href="https://whatsapp.com/channel/0029VbAwDzD8fewrz5ocLE03">Canal WhatsApp</a></li>
-        </ul>
-      </div>
-  
-      <div class="footer-section">
-        <h3>Contact</h3>
-        <p>Email : contact@coindesetudiants.fr</p>
-        <p>© 2025 Le Coin Des Étudiants — Tous droits réservés</p>
-      </div>
-  
+
+        <div class="cta">
+            <button>
+                <img src="add.png" alt="">
+                Déposer une annonce
+            </button>
+        </div>
+    </nav>
+
+    <!-- TITRE PAGE -->
+    <div class="page-title">
+        <h1>À propos</h1>
+        <div class="title-underline"></div>
     </div>
-  </footer>
+
+    <!-- TEXTE -->
+    <section class="apropos-texte">
+        <p>
+            🧩 L’histoire de Coin des Étudiants<br><br>
+            Être étudiant en France, c’est souvent devoir faire face à de nombreux défis : trouver un logement, s’équiper à petit prix, accéder à des services abordables ou simplement bénéficier d’un peu de solidarité. Nous avons tous connu ces moments où chaque euro compte, où il faut improviser pour s’en sortir.
+            <br><br>
+            En observant notre quotidien, nous avons remarqué que tous les services utiles aux étudiants étaient dispersés : ici une plateforme de dons, là une pour la colocation, ailleurs une autre pour les bons plans. Aucune ne rassemblait tous ces besoins essentiels au même endroit, spécifiquement pour les étudiants.
+            <br><br>
+            Les plateformes généralistes comme Leboncoin offrent des solutions, mais elles restent souvent inaccessibles aux budgets étudiants : prix trop élevés, offres inadaptées, risques d’arnaques ou frais d’agence abusifs pour les logements. Nous voulions créer une alternative étudiante, simple, fiable et solidaire.
+            <br><br>
+            C’est ainsi qu’est né Coin des Étudiants : une plateforme tout-en-un, pensée par et pour les étudiants, qui regroupe :
+            <br>● des offres de logement et colocation sans frais d’agence,
+            <br>● des dons d’objets (meubles, électroménager, vêtements…),
+            <br>● un espace d’achat et de vente entre étudiants,
+            <br>● et des bons plans pour améliorer le quotidien étudiant.
+            <br><br>
+            Notre ambition est claire : rendre la vie étudiante plus accessible, plus humaine et plus connectée.  
+            Coin des Étudiants, c’est bien plus qu’un projet numérique — c’est une communauté d’entraide où chaque étudiant peut donner, recevoir, partager et réussir.
+            <br><br>
+            <strong>Notre Équipe</strong>
+        </p>
+    </section>
+
+    <!-- FOOTER -->
+    <footer>
+        <div class="footer-container">
+
+            <div class="footer-section">
+                <h3>À propos</h3>
+                <p>Coin des Étudiants — plateforme d’entraide entre étudiants.</p>
+            </div>
+
+            <div class="footer-section">
+                <h3>Liens rapides</h3>
+                <ul>
+                    <li><a href="#">Accueil</a></li>
+                    <li><a href="#">Dons</a></li>
+                    <li><a href="#">Logements</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-section">
+                <h3>Contact</h3>
+                <p>support@coindesetudiants.fr</p>
+                <p>© 2025 Coin des Étudiants</p>
+            </div>
+
+        </div>
+    </footer>
 
 </body>
 </html>
-
