--- a/apropos.html
+++ b/apropos.html
@@ -1,156 +1,329 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Le Coin Des Étudiants</title>
-  <link rel="stylesheet" href="apropos.css">
-</head>
-<body>
-  <nav>
-    <div class="burger" id="burger">
-      &#9776; 
-    </div>
+/* ------------------------- */
+/* RESET + BASE */
+/* ------------------------- */
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+}
 
-    <div class="logo">
-      <img src="logo.png" alt="Logo">
-      <span>Le Coin Des Étudiants</span>
-    </div>
-    <ul class="nav-links" id="nav-links">
-      <li class="menu-header">
-        <span>Le Coin Des Étudiants</span>
-      </li>
-      <li><a href="index.html" class="active">Accueil</a></li>
-      <li><a href="services.html">Services</a></li>
-      <li><a href="apropos.html">À propos</a></li>
-      <li><a href="partenariats.html">Partenariats</a></li>
-      <li><a href="contact.html">Contact</a></li>
-      <button class="menu-cta">Télécharge l'application</button>
-    </ul>
+body {
+  background-color: #f8f9fa;
+  color: #333;
+}
 
-    <div class="cta">
-      <button class="cta-btn" onclick="window.location.href='https://whatsapp.com/channel/0029VbAwDzD8fewrz5ocLE03'">
-        <img src="logo-whatsapp.png" alt="WhatsApp">
-        Rejoins notre canal
-      </button>
-    </div>
-  </nav>
-  <div id="menu-overlay" class="menu-overlay" aria-hidden="true"></div>
-  <section class="apropos-header">
-    <h2>À propos de nous</h2>
+/* ------------------------- */
+/* NAVIGATION */
+/* ------------------------- */
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: clamp(6px, 1vw, 18px) clamp(12px, 2vw, 40px);
+  background-color: #fff;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+  width: 100%;
+}
 
-    <div class="apropos-section">
-      <div class="apropos-image">
-        <img src="equipe.jpg" alt="Notre équipe" />
-      </div>
+.logo {
+  display: flex;
+  align-items: center;
+  gap: clamp(3px, 0.8vw, 8px);
+  text-decoration: none;
+  color: #1c95eb;
+  font-weight: bold;
+  font-size: clamp(5px, 1.6vw, 20px);
+  white-space: nowrap;
+}
 
-      <div class="apropos-text">
-       <p>
-  🧩 <strong>L’histoire de Coin des Étudiants</strong><br><br>
+.logo img {
+  height: clamp(20px, 5vw, 70px);
+}
 
-  Être étudiant en France, c’est souvent devoir relever de nombreux défis : trouver un logement, s’équiper à petit prix, accéder à des services abordables ou simplement bénéficier d’un peu de solidarité. Nous avons tous connu ces moments où chaque euro compte, où il faut improviser pour réussir à s’en sortir.<br><br>
+.nav-links {
+  display: flex;
+  justify-content: center;
+  flex: 1;
+  gap: clamp(6px, 2vw, 30px);
+  list-style: none;
+}
 
-  En observant notre quotidien, nous avons remarqué que tous les services utiles aux étudiants étaient dispersés : ici une plateforme de dons, là une autre pour la colocation, ailleurs un site pour les bons plans… Aucune ne regroupait tous ces besoins essentiels au même endroit, spécifiquement pour les étudiants.<br><br>
+.nav-links li a {
+  text-decoration: none;
+  color: #1c95eb;
+  font-weight: 500;
+  font-size: clamp(8px, 1.4vw, 18px);
+  transition: color 0.3s;
+}
 
-  Les plateformes généralistes comme Leboncoin proposent des solutions, mais elles restent souvent difficiles d’accès pour les budgets étudiants : prix trop élevés, offres inadaptées, risques d’arnaques ou encore frais d’agence abusifs pour la recherche de logement.<br><br>
+.nav-links li a:hover {
+  color: #0054ad;
+}
 
-  C’est pour répondre à ces problèmes qu’est né <strong>Coin des Étudiants</strong>, une plateforme tout-en-un, pensée par des étudiants et pour les étudiants, qui rassemble :<br><br>
+.menu-cta,
+.nav-links .menu-header {
+  display: none;
+}
 
-  • des offres de logement et de colocation sans frais d’agence,<br>
-  • des dons d’objets (meubles, électroménager, vêtements…),<br>
-  • un espace d’achat et de vente entre étudiants,<br>
-  • des bons plans pour améliorer le quotidien étudiant.<br><br>
+.cta {
+  display: flex;
+  justify-content: flex-end;
+}
 
-  Notre ambition est simple : rendre la vie étudiante plus accessible, plus humaine et plus connectée.<br><br>
+.cta button {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  padding: 12px 20px;
+  font-size: 16px;
+  background-color: #30ce27;
+  color: #fff;
+  border: none;
+  border-radius: 50px;
+  cursor: pointer;
+  font-weight: bold;
+}
 
-  <strong>Coin des Étudiants</strong>, ce n’est pas seulement un projet numérique : c’est une communauté d’entraide, où chacun peut donner, recevoir, partager et réussir.
-</p>
+.cta button:hover {
+  background-color: #1aa813;
+}
 
-      </div>
-    </div>
+.cta button img {
+  height: 20px;
+}
 
-    <div class="apropos-video">
-      <iframe
-        src="https://www.youtube.com/embed/VIDEO_ID"
-        title="Présentation vidéo"
-        allowfullscreen
-      ></iframe>
-    </div>
-  </section>
+/* ------------------------- */
+/* TITRE DE PAGE */
+/* ------------------------- */
+.apropos-header h2 {
+  font-size: 42px;
+  color: #007bff;
+  text-align: center;
+  margin-top: 40px;
+  font-weight: 600;
+}
 
-  <section class="equipe">
-    <h2>Notre équipe</h2>
+.apropos-header h2::after {
+  content: "";
+  display: block;
+  width: 120px;
+  height: 5px;
+  margin: 12px auto;
+  background: linear-gradient(90deg, #1c95eb, #30ce27);
+  border-radius: 5px;
+  animation: underline-grow 0.8s ease-out forwards;
+  transform: scaleX(0);
+}
 
-    <div class="equipe-grid">
-      <div class="membre">
-        <img src="Fondateur.jpg" alt="Membre équipe" />
-        <h3>Cheikh ibra Ndiaye</h3>
-        <p>Fondateur</p>
-        <a href="#">cheikhibrandiaye75@email.com</a>
-      </div>
+@keyframes underline-grow {
+  to {
+    transform: scaleX(1);
+  }
+}
 
-      <div class="membre">
-        <img src="meuf.jpg" alt="Membre équipe" />
-        <h3>Niang Bassine</h3>
-        <p>Directrice Générale & Responsable communication</p>
-        <a href="#">enissab565@gmail.com</a>
-      </div>
+/* ------------------------- */
+/* SECTION APROPOS */
+/* ------------------------- */
+.apropos-section {
+  display: flex;
+  gap: 40px;
+  padding: 50px 7%;
+  align-items: flex-start;
+  flex-wrap: wrap;
+}
 
-      <div class="membre">
-        <img src="mec3.jpg" alt="Membre équipe" />
-        <h3>Niang Dauda</h3>
-        <p>Chef de produit / Responsable innovation</p>
-        <a href="#">niangdauda7@gmail.com</a>
-      </div>
-    </div>
-  </section>
+.apropos-image img {
+  width: 100%;
+  max-width: 420px;
+  border-radius: 16px;
+  box-shadow: 0 8px 20px rgba(0,0,0,0.15);
+}
 
-  <section class="rejoindre">
-    <h2>Vous souhaitez nous rejoindre ?</h2>
+.apropos-text p {
+  font-size: 1.1rem;
+  line-height: 1.7;
+  color: #333;
+  margin-bottom: 20px;
+}
 
-    <div class="cta-buttons">
-      <a href="https://docs.google.com/forms/d/e/1FAIpQLSfxFWhEgEM0nuMQ1LxaQ293BqxbW6cxz4bv4Nd62cu1i846mQ/viewform?usp=header" class="cta">Formulaire partenariat</a>
-      <a href="https://whatsapp.com/channel/0029VbAwDzD8fewrz5ocLE03" class="cta">Canal WhatsApp</a>
-    </div>
+/* ------------------------- */
+/* VIDEO */
+/* ------------------------- */
+.apropos-video iframe {
+  width: 100%;
+  max-width: 750px;
+  height: 420px;
+  border-radius: 16px;
+  border: none;
+  display: block;
+  margin: 30px auto;
+}
 
-    <h3>Ou alors...</h3>
+/* ------------------------- */
+/* EQUIPE */
+/* ------------------------- */
+.equipe h2 {
+  font-size: 38px;
+  text-align: center;
+  color: #007bff;
+  margin-bottom: 20px;
+}
 
-    <a href="#" class="cta-big">Télécharger l'application</a>
-  </section>
+.equipe h2::after {
+  content: "";
+  display: block;
+  width: 90px;
+  height: 5px;
+  margin: 12px auto;
+  background: linear-gradient(90deg, #1c95eb, #30ce27);
+  border-radius: 5px;
+}
 
-  <footer>
-    <div class="footer-container">
-  
-      <div class="footer-section">
-        <h3>Le Coin Des Étudiants</h3>
-        <p>La plateforme solidaire dédiée aux étudiants en France.</p>
-      </div>
-  
-      <div class="footer-section">
-        <h3>Navigation</h3>
-        <ul>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="apropos.html">À propos</a></li>
-          <li><a href="partenariats.html">Partenariats</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </div>
-  
-      <div class="footer-section">
-        <h3>Réseaux sociaux</h3>
-        <ul>
-          <li><a href="https://whatsapp.com/channel/0029VbAwDzD8fewrz5ocLE03">Canal WhatsApp</a></li>
-        </ul>
-      </div>
-  
-      <div class="footer-section">
-        <h3>Contact</h3>
-        <p>Email : contact@coindesetudiants.fr</p>
-        <p>© 2025 Le Coin Des Étudiants — Tous droits réservés</p>
-      </div>
-  
-    </div>
-  </footer>
+.equipe-grid {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  flex-wrap: wrap;
+  padding: 0 5%;
+}
 
-</body>
-</html>
+.membre {
+  background: white;
+  padding: 20px;
+  border-radius: 18px;
+  width: 260px;
+  text-align: center;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+}
+
+.membre img {
+  width: 100%;
+  height: 180px;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+.membre h3 {
+  margin-top: 12px;
+  color: #1c95eb;
+  font-size: 1.2rem;
+}
+
+.membre p {
+  color: #30ce27;
+  font-size: 0.95rem;
+}
+
+.membre a {
+  text-decoration: underline;
+  color: #007bff;
+  font-size: 0.9rem;
+}
+
+/* ------------------------- */
+/* CTA FINAL */
+/* ------------------------- */
+.rejoindre h2 {
+  font-size: 38px;
+  text-align: center;
+  color: #007bff;
+  margin-top: 50px;
+}
+
+.rejoindre h2::after {
+  content: "";
+  display: block;
+  width: 90px;
+  height: 5px;
+  margin: 12px auto;
+  background: linear-gradient(90deg, #1c95eb, #30ce27);
+  border-radius: 5px;
+}
+
+.cta-buttons {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin: 25px 0;
+}
+
+.cta-buttons .cta {
+  background: #1c95eb;
+  color: #fff;
+  padding: 14px 28px;
+  border-radius: 30px;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+.cta-buttons .cta:hover {
+  background: #0054ad;
+}
+
+.cta-big {
+  display: block;
+  margin: auto;
+  width: fit-content;
+  padding: 16px 40px;
+  background: linear-gradient(90deg, #1c95eb, #30ce27);
+  color: white;
+  border-radius: 50px;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 1.2rem;
+  transition: 0.3s;
+}
+
+.cta-big:hover {
+  transform: translateY(-3px);
+}
+
+/* ------------------------- */
+/* FOOTER */
+/* ------------------------- */
+footer {
+  background-color: #1c1c1c;
+  color: white;
+  padding: 50px 20px;
+  margin-top: 50px;
+}
+
+.footer-container {
+  display: flex;
+  justify-content: center;
+  gap: 60px;
+  max-width: 1200px;
+  margin: auto;
+}
+
+.footer-section {
+  flex: 1;
+  min-width: 220px;
+  text-align: center;
+}
+
+/* ------------------------- */
+/* RESPONSIVE */
+/* ------------------------- */
+@media (max-width: 768px) {
+
+  .apropos-section {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .apropos-image img {
+    max-width: 330px;
+    margin: auto;
+  }
+
+  .equipe-grid .membre {
+    width: 90%;
+    max-width: 320px;
+  }
+
+  .cta-buttons {
+    flex-direction: column;
+  }
+}
