--- a/services.html
+++ b/services.html
@@ -37,9 +37,44 @@
     </div>
   </nav>
   <div id="menu-overlay" class="menu-overlay" aria-hidden="true"></div>
-  <script src="script.js"></script>
+
+  <footer>
+    <div class="footer-container">
+  
+      <div class="footer-section">
+        <h3>Le Coin Des Étudiants</h3>
+        <p>La plateforme solidaire dédiée aux étudiants en France.</p>
+      </div>
+  
+      <div class="footer-section">
+        <h3>Navigation</h3>
+        <ul>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="apropos.html">À propos</a></li>
+          <li><a href="partenariats.html">Partenariats</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </div>
+  
+      <div class="footer-section">
+        <h3>Réseaux sociaux</h3>
+        <ul>
+          <li><a href="https://whatsapp.com/channel/0029VbAwDzD8fewrz5ocLE03">Canal WhatsApp</a></li>
+        </ul>
+      </div>
+  
+      <div class="footer-section">
+        <h3>Contact</h3>
+        <p>Email : contact@coindesetudiants.fr</p>
+        <p>© 2025 Le Coin Des Étudiants — Tous droits réservés</p>
+      </div>
+  
+    </div>
+  </footer>
+<script src="script.js"></script>
 </body>
 </html>
+
 
 
 
