--- a/services.html
+++ b/services.html
@@ -40,7 +40,7 @@
 
   <main class="services-page">
     <section class="service-section">
-      <h2>Étudiants</h2>
+      <h2>Dons Étudiants</h2>
       <p>Découvrez les meilleures annonces de notre communauté étudiante</p>
     
       <div class="search-filter">
@@ -164,6 +164,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
